--- a/security/freebsd-sgx/Makefile
+++ b/security/freebsd-sgx/Makefile
@@ -1,4 +1,3 @@
-# Created by: Li-Wen Hsu <lwhsu@FreeBSD.org>
 # $FreeBSD$
 
 PORTNAME=	freebsd-sgx
@@ -13,11 +12,15 @@ COMMENT=	FreeBSD support for Intel SGX SDK
 
 LICENSE=	BSD3CLAUSE
 
-BUILD_DEPENDS=	ocamlbuild:lang/ocaml
+BUILD_DEPENDS=	bash:shells/bash \
+		ocamlbuild:lang/ocaml \
+		protoc:devel/protobuf \
+		autoreconf:devel/autoconf \
+		automake:devel/automake
 
 OPTIMIZED_LIB_VRSION=	1.9.100.39124
 
-USES=	gmake
+USES=	gmake libtool:build
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	bukinr
@@ -28,9 +31,11 @@ USE_LDCONFIG=	yes
 PLIST_FILES=\
 	lib/libsgx_uae_service.so \
 	lib/libsgx_urts.so \
-	sbin/aesm_service \
+	sbin/aesm_service
 
-.if ${OPSYS} == FreeBSD && ${OSREL:R} < 12
+.include <bsd.port.pre.mk>
+
+.if ${OSREL:R} < 12
 IGNORE=	Intel SGX support is not available in FreeBSD-${OSREL:R}
 .endif
 
@@ -42,4 +47,4 @@ do-install:
 	${INSTALL_LIB} build/linux/libsgx_uae_service.so ${STAGEDIR}${PREFIX}/lib/
 	${INSTALL_LIB} build/linux/libsgx_urts.so ${STAGEDIR}${PREFIX}/lib/
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
